karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
/* imagedrawer classes */

.tiny-imagedrawer-dialog {
    text-align: left;
}

.tiny-imagedrawer-panel {
    padding: 0.5em;
}

/* hide title bar */
.tiny-imagedrawer-dialog .ui-dialog-titlebar {
    display: none;
}

/* make close button working 
 * (which is copied from titlebar to top-bar by js)
 * */

.tiny-imagedrawer-panel-top {
    position: relative;
}

.tiny-imagedrawer-panel-top .tiny-imagedrawer-titlebar {
    margin-right: 30px;
}

.tiny-imagedrawer-panel-top .tiny-imagedrawer-button-close {
    position: absolute;
    height: 19px;
    width: 18px;
    padding: 1px;
    margin: -10px 0 0;
    right: 0.3em;
    top: 15px;
}

/* set back what label overwrites globally */
.tiny-imagedrawer-panel-info label {
    font-size: 100%;
    font-weight: normal;
}

/* a darker overlay. XXX Rather change the theme than overwrite here! */
.ui-widget-overlay {
    background: none repeat-x scroll 0 0 #777777;
    opacity: 0.7;
}

/* info panel */

.tiny-imagedrawer-info-title {
    font-size: 1.6em;
}

.tiny-imagedrawer-info-label {
    margin-left: -75px;
    float: left;
}

.tiny-imagedrawer-info-columnwrapper {
    padding-left: 75px;
}

.tiny-imagedrawer-buttonset-upload {
    margin-left: 0;
    margin-top: 1.5em;
}

/* Image listing */
.tiny-imagedrawer-panel-images {
    overflow: hidden;
}

.tiny-imagedrawer-images {
    overflow: hidden;
    padding: 0.5em;
    margin: -0.5em;
}

.tiny-imagedrawer-scrollbar {
    margin: 8px 0.5em 0;
}

ul.tiny-imagedrawer-imagestripe {
    padding: 0;
    margin: 0;
    border: 0 none transparent;
    height: 122px; /* must match height of the li */
    overflow: hidden;
}



/* Vertical and horizontal positioning 
 * of the thumbnail inside a fixed size
 * wrapper. Thumb must fit the wrapper's
 * dimensions. 
 *
 * The current solution works on all browsers
 * including IE6, IE>7, FF3, Safari.
 * For non-w3c browsers a hack is used that
 * makes the css non-validating.
 * */

ul.tiny-imagedrawer-imagestripe li {
    display: inline-block;
    width: 93px; /* 4px + 85px + 4px */
    height: 120px; /* must match height of the ul */
    border: 1px solid white;
    text-align: center;
    float: left;
}

div.tiny-imagedrawer-image {
    /* making the dimensions bigger than the image
     * will add a natural margin. */
    width: 93px; /* 4px + 85px + 4px */
    height: 93px; /* 4px + 85px + 4px */
    display: table;
    overflow: hidden;
    /* non-w3c hacks: */
    #position: relative;
}

div.tiny-imagedrawer-image div {
    display: table-cell;
    vertical-align: middle;
    /* non-w3c hacks: */
    #position: absolute;
    #top: 50%;
    #left: 50%;
}

div.tiny-imagedrawer-image img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    /* To be sure. But this should only
     * have a role with stale oversize thumbs.*/
    max-height: 85px;
    max-width: 85px;
    overflow: hidden;
    /* non-w3c hacks: */
    #position: relative;
    #top: -50%;
    #left: -50%;
}

span.tiny-imagedrawer-imagelabel {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 85px;
    overflow: hidden;
    white-space: nowrap;
}

input.tiny-imagedrawer-input-url {
    width: 350px;
}

.tiny-imagedrawer-buttonset-check {
    margin-top: 1em;
    margin-left: 0;
}

.tiny-imagedrawer-buttonset-save {
    margin-top: 2em;
    margin-left: 0;
}

input.tiny-imagedrawer-input-captiontext {
    width: 225px;
}

